--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.19.0
   firebase_core:
-
+  cloud_firestore: ^5.5.0
+  firebase_auth: ^5.3.3
   cached_network_image: ^3.2.3
+  flutter_dotenv: ^5.2.1
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
